  same type. Example:

        /* Type p i -> i -> prop. */
        forall (x y : i) (f g : i -> i), p (f (g y)) (g (f x))

* The `apply` tactic now takes an optional numerical argument that defines
  the search depth for automatic searches performed for omitted arguments. A
  bound of 0 means that no searches are attempted.

* Error messages in interactive mode are printed to stderr in addition to any
  other output file specified with `-o`.

* The `monotone` tactic now accepts hypothesis naming hints. (#91)

Bugfixes

* Query was broken since 2.0.4-beta2.  
  (#69; reported by Ahn Ki Yung)
* Backchain now correctly takes into account inductive restrictions  
  (#70; reported by Ahn Ki Yung)
* Search now correctly raises eigenvariables over support  
  (#71; reported by Morten Rhiger)


Changes in 2.0.4 from 2.0.3
---------------------------

Possibly breaking changes

* The `search` tactic has the same error handling behavior in interactive
  and non-interactive modes, functioning like a failed tactic in both cases
  if no subgoals were closed.
* The character `&` can no longer appear inside the names of identifiers.

Additions

* Added support for specification-level conjunction, written using `&`.

* Added a new tactic form:

        search with <witness>.

  This tactic runs the search command with a given search witness. To see
  these witnesses, run any of the other search forms with:

        Set witnesses on.

  The witness string that is printed can then be used to replay the exact
  same search. There is no backtracking involved with witness strings.
  Hence, the replay will tend to be a lot faster.

  Witnesses have the following grammar:

        witness ::= true | =
                  | left witness | right witness
                  | split(witness,witness)
                  | apply hyp
                  | intros[id1, ..., idn] witness
                  | exists[id1=term1, ..., idn=termn] witness
                  | unfold(id,n,witness1,...,witnessn)